fix problem with rassh file